After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700668 - Squash compiler warnings
Squash compiler warnings
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-19 21:33 UTC by Giovanni Campagna
Modified: 2013-05-22 21:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Squash compiler warnings (10.88 KB, patch)
2013-05-19 21:33 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-05-19 21:33:51 UTC
Use the right JSHandle* types in getters and setters, and fix
a number of other minor issues.
Comment 1 Giovanni Campagna 2013-05-19 21:33:54 UTC
Created attachment 244740 [details] [review]
Squash compiler warnings
Comment 2 Colin Walters 2013-05-22 21:09:55 UTC
Review of attachment 244740 [details] [review]:

Looks right.