Squash compiler warnings

Use the right JSHandle* types in getters and setters, and fix
a number of other minor issues.

https://bugzilla.gnome.org/show_bug.cgi?id=700668