gi/object.c
@@ -244,10 +244,10 @@ proto_priv_from_js(JSContext *context,
  * Return value is JS_FALSE on OOM/exception.
  */
 static JSBool
-object_instance_get_prop(JSContext *context,
-                         JSObject **obj,
-                         jsid      *id,
-                         jsval     *value_p)
+object_instance_get_prop(JSContext            *context,
+                         JSHandleObject        obj,
+                         JSHandleId            id,
+                         JSMutableHandleValue  value_p)
 {
     ObjectInstance *priv;
     char *name;
@@ -256,12 +256,12 @@ object_instance_get_prop(JSContext *context,
     GValue gvalue = { 0, };
     JSBool ret = JS_TRUE;
 
-    if (!gjs_get_string_id(context, *id, &name))
+    if (!gjs_get_string_id(context, *id._, &name))
         return JS_TRUE; /* not resolved, but no error */
 
-    priv = priv_from_js(context, *obj);
+    priv = priv_from_js(context, *obj._);
     gjs_debug_jsprop(GJS_DEBUG_GOBJECT,
-                     "Get prop '%s' hook obj %p priv %p", name, obj, priv);
+                     "Get prop '%s' hook obj %p priv %p", name, *obj._, priv);
 
     if (priv == NULL) {
         /* If we reach this point, either object_instance_new_resolve
@@ -297,7 +297,7 @@ object_instance_get_prop(JSContext *context,
     g_value_init(&gvalue, G_PARAM_SPEC_VALUE_TYPE(param));
     g_object_get_property(priv->gobj, param->name,
                           &gvalue);
-    if (!gjs_value_from_g_value(context, value_p, &gvalue)) {
+    if (!gjs_value_from_g_value(context, value_p._, &gvalue)) {
         g_value_unset(&gvalue);
         ret = JS_FALSE;
         goto out;
@@ -313,23 +313,23 @@ object_instance_get_prop(JSContext *context,
  * be set. Return value is JS_FALSE on OOM/exception.
  */
 static JSBool
-object_instance_set_prop(JSContext *context,
-                         JSObject **obj,
-                         jsid      *id,
-                         JSBool     strict,
-                         jsval     *value_p)
+object_instance_set_prop(JSContext            *context,
+                         JSHandleObject        obj,
+                         JSHandleId            id,
+                         JSBool                strict,
+                         JSMutableHandleValue  value_p)
 {
     ObjectInstance *priv;
     char *name;
     GParameter param = { NULL, { 0, }};
     JSBool ret = JS_TRUE;
 
-    if (!gjs_get_string_id(context, *id, &name))
+    if (!gjs_get_string_id(context, *id._, &name))
         return JS_TRUE; /* not resolved, but no error */
 
-    priv = priv_from_js(context, *obj);
+    priv = priv_from_js(context, *obj._);
     gjs_debug_jsprop(GJS_DEBUG_GOBJECT,
-                     "Set prop '%s' hook obj %p priv %p", name, obj, priv);
+                     "Set prop '%s' hook obj %p priv %p", name, *obj._, priv);
 
     if (priv == NULL) {
         /* see the comment in object_instance_get_prop() on this */
@@ -339,7 +339,7 @@ object_instance_set_prop(JSContext *context,
         goto out;
 
     switch (init_g_param_from_property(context, name,
-                                       *value_p,
+                                       *value_p._,
                                        G_TYPE_FROM_INSTANCE(priv->gobj),
                                        &param,
                                        FALSE /* constructing */)) {
